# computer_vision

./: README.md
Cpp/contours/: find_contours.cpp  find_contours2.cpp  shape_simple.cpp
Cpp/display_video/: main.cpp
Cpp/drawing/: drawing.cpp
Cpp/histograms/: histograms.cpp
Cpp/kalman/: kalman.cpp
Cpp/mappings/: persp.cpp
Cpp/paint/: paint.cpp
Cpp/pyramid_trafo/: main.cpp
Matlab/HA3/: F_ransac.m
Matlab/HA4/: rekonstruktion.m
homework_computer_vision_tum/HA1/: rgb_to_gray.m  sobel_xy.m
homework_computer_vision_tum/HA3/: F_ransac.m~
homework_computer_vision_tum/HA4/: CVHA4.m  TR_aus_E.m
projects/homework_computer_vision_tum/HA1/: CVHA1.m
projects/homework_computer_vision_tum/HA3/: CVHA3.m  achtpunktalgorithmus.m
projects/homework_computer_vision_tum/HA4/: punkt_korrespondenzen.m
projects/integral_histogram/: integralhistogram.cpp  integralhistogram.h
snippets/: CMakeLists.txt
snippets/analysis/: dft.cpp
snippets/color_olbpc_descriptor/: colbpc.cpp
snippets/connected_component_analysis/: cpa.cpp
snippets/contours/: find_contours_old.cpp  new_find_contours_backup.cpp
snippets/display_picture/: main.cpp
snippets/display_video/: main.cpp
snippets/files/: files.cpp
snippets/functors/: functors.cpp
snippets/kalman_tracking/: lkdemo.cpp
snippets/mappings/: mappings.cpp
snippets/simple_trafo/: main.cpp
